@@ -2,8 +2,19 @@ government = monarchy
 add_government_reform = feudalism_reform
 technology_group = indian
 primary_culture = panjabi
-religion = manichean
+religion = mahayana
 capital = 510 # Sirhind
+
+1420.4.20 = { 
+	monarch = {
+		name = "Sahib Singh"
+		dynasty = "Phulkian"
+		adm = 2
+		dip = 3
+		mil = 2
+	}
+}
+
 
 1763.1.1 = {
 	monarch = {
