@@ -2,7 +2,7 @@ government = monarchy
 add_government_reform = feudalism_reform
 technology_group = indian
 primary_culture = panjabi
-religion = hinduism
+religion = sikhism
 capital = 510 #Sirhind
 
 #Lodis
