@@ -13,7 +13,7 @@ base_manpower = 2
 is_city = yes
 add_brahmins_or_church_effect = yes
 add_permanent_claim = MUL
-add_core = PUN
+add_core = PTA
 add_core = DLH
 discovered_by = indian
 discovered_by = muslim 
