@@ -11,7 +11,7 @@ base_tax = 3
 base_production = 3
 base_manpower = 1
 is_city = yes
-add_core = PUN
+add_core = PTA
 discovered_by = indian
 discovered_by = nomad_group
 discovered_by = muslim
