@@ -12,7 +12,6 @@ base_production = 1
 base_manpower = 1
 is_city = yes
 add_core = MUL
-add_core = PUN
 estate = estate_nobles
 discovered_by = indian
 discovered_by = muslim 
