@@ -12,7 +12,7 @@ base_production = 5
 base_manpower = 4
 is_city = yes
 add_core = MUL
-add_core = PUN
+add_core = PTA
 discovered_by = indian
 discovered_by = muslim
 discovered_by = ottoman
