@@ -13,7 +13,7 @@ base_manpower = 4
 is_city = yes
 add_core = DLH
 add_permanent_claim = MUL
-add_core = PUN
+add_core = PTA
 fort_15th = yes
 discovered_by = indian
 discovered_by = muslim 
