@@ -14,7 +14,7 @@ is_city = yes
 estate = estate_nobles
 add_core = DLH
 add_permanent_claim = MUL
-add_core = PUN
+add_core = PTA
 discovered_by = indian
 discovered_by = muslim 
 discovered_by = ottoman
