@@ -13,7 +13,7 @@ base_manpower = 2
 is_city = yes
 add_permanent_claim = MUL
 add_core = DLH
-add_core = PUN
+add_core = PTA
 discovered_by = indian
 discovered_by = muslim
 discovered_by = ottoman
