@@ -13,7 +13,7 @@ base_manpower = 4
 is_city = yes
 fort_15th = yes
 add_core = MUL
-add_core = PUN
+add_core = PTA
 center_of_trade = 1
 
 
