@@ -36,3 +36,7 @@
  PRK_ADJ:1 "Pahangite"
  TRE:1 "Trashzond"
  TRE_ADJ:1 "Trashzuntine"
+ PTA:1 "Punjab"
+ PTA_ADJ:1 "Punjabi"
+ PUN:1 "Sarkar-i"
+ PUN_ADJ:1 "Sikh"
