@@ -1,11 +1,13 @@
 ﻿l_english:
 
- timurid_nation_desc:0 "We are the descendants of Timur Lenk, the great conqueror of Central Asia and the man who had a bold plan to conquer the divided lands of Greater Persia. However, this dream would never come to pass, for Timur was betrayed by the traitorous Manichaeans who assassinated him. This betrayal has been now avenged with the subjugation of Khwarezmia and the final destruction of the Kartids. With these conquests, we can, at last, proclaim ourselves the true successor of Timur's legacy, and be the leaders of all of the Ghurkani princes."
- rajput_nation_desc:0 "The lands of Rajputana have been shattered and weakened ever since the Manichaean invasion centuries ago. We must reclaim the great cities of the great dynasties that came before us and unite the princes of Rajputana!"
- maratha_nation_desc:0 "The Maratha warriors all over Deccan will gather to our banners if we show clear leadership and acquire all the great forts of the Desh. Let us unite the clans and go forth to rule India!"
- sultan_of_delhi_title:0 "Restore the Shahdom of Delhi"
- sultan_of_delhi_desc:0 "Delhi was once the capital of the great Delhian Shahdom which at its height ruled from the Khyber Pass in the west to the Bay of Bengal in the east and, from Kashmir in the north to Gulf of Khambhat in the South. While the influence of the Shahdom has diminished over the decades its legacy still lives on and, with the reconquest of the old imperial cities of Doab, we can now, at last, reclaim our heritage as the Shahs of Delhi."
- romanian_nation_title:0 "Form Dacian nation"
- romanian_nation_desc:0 "REPLACE_ME"
- turkish_nation_title:0 "Restore the Khanate of Rûm"
- turkish_nation_desc:0 "Once, the Khanate of Rûm united all the Turkish Beys and Sefliks of Anatolia, but it was brought down by jealous and deceitful enemies from afar. By tearing down the empires that defile the memory of the Seljuk dynasty we can restore the Khanate that once was. Let us unite the Beys under our banner and bring destruction upon those that would dream themselves our overlords!"
+ timurid_nation_desc:1 "We are the descendants of Timur Lenk, the great conqueror of Central Asia and the man who had a bold plan to conquer the divided lands of Greater Persia. However, this dream would never come to pass, for Timur was betrayed by the traitorous Manichaeans who assassinated him. This betrayal has been now avenged with the subjugation of Khwarezmia and the final destruction of the Kartids. With these conquests, we can, at last, proclaim ourselves the true successor of Timur's legacy, and be the leaders of all of the Ghurkani princes."
+ rajput_nation_desc:1 "The lands of Rajputana have been shattered and weakened ever since the Manichaean invasion centuries ago. We must reclaim the great cities of the great dynasties that came before us and unite the princes of Rajputana!"
+ maratha_nation_desc:1 "The Maratha warriors all over Deccan will gather to our banners if we show clear leadership and acquire all the great forts of the Desh. Let us unite the clans and go forth to rule India!"
+ sultan_of_delhi_title:1 "Restore the Shahdom of Delhi"
+ sultan_of_delhi_desc:1 "Delhi was once the capital of the great Delhian Shahdom which at its height ruled from the Khyber Pass in the west to the Bay of Bengal in the east and, from Kashmir in the north to Gulf of Khambhat in the South. While the influence of the Shahdom has diminished over the decades its legacy still lives on and, with the reconquest of the old imperial cities of Doab, we can now, at last, reclaim our heritage as the Shahs of Delhi."
+ romanian_nation_title:1 "Form Dacian nation"
+ romanian_nation_desc:1 "The lands of Dacia are rich in resources, culture, and civilization eyed jealously by our greedy neighbors. These ancient lands belong in the hands of our people who have ruled since the dawn of time. We shall restore the kingdom of forefathers by uniting all Dacia under one banner!"
+ turkish_nation_title:1 "Restore the Khanate of Rûm"
+ turkish_nation_desc:1 "Once, the Khanate of Rûm united all the Turkish Beys and Sefliks of Anatolia, but it was brought down by jealous and deceitful enemies from afar. By tearing down the empires that defile the memory of the Seljuk dynasty we can restore the Khanate that once was. Let us unite the Beys under our banner and bring destruction upon those that would dream themselves our overlords!"
+ punjab_nation_title:1 "Form the Kingdom of Sarkar-i"
+ punjab_nation_desc:0 "We must unite the people of the Sikh faith if we shall ever be able to withstand invasions from foreign foes. Together we will build a modern state with armies capable of taking on the many enemies who would attack us for our lands, and who would do anything to extinguish our faith!"
