@@ -4,9 +4,14 @@ Version 1.18.1 India Patch
 		+ Localisation fixed due to duplication error
 	+ Oman Mission Tree
 		+ Oman missions localisation fixed due to the mentions Swahili
+	+  Ghassanids get arab missions
+	+ Updated country flags to better fit with lore
 		+ Karnata, Multan, Sindh, Lahore
 	+ Tamilakam
 		+ New event which fires due to low religious unity
+	+ Punjab
+		+ Renamed to Sarkar-i to better fit with Sikh lore
+		+ Patiala renamed to Punjab
 Version 18.0 (yes, FoI is now of age), otherwise known as the "China Patch 2: Electric Boogaloo feat. India and SEA"
 	+ Overhaul of the China Superregion! ...again.
 		+ New ideas for most countries!
